# libqicore-release

./: 0001-convert-CMake-to-qibuild.patch  0002-have-it-work-in-a-workspace.patch  0003-Compat-with-libqi-2.5.patch  0004-Enable-C-11-to-make-sure-it-plays-nicely-with-libqi-.patch  0005-Backward-compatibility-with-libqi-2.3.patch  CMakeLists.txt  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
jade/: package.xml
kinetic/: package.xml
libqicore/: CMakeLists.txt
libqicore/qicore/: logmessage.hpp
rpm/: ros-indigo-naoqi-libqicore.spec  ros-jade-naoqi-libqicore.spec  template.spec
