<?xml version="1.0"?>
<package>
  <name>naoqi_libqicore</name>
  <version>2.3.1</version>
  <description>Aldebaran's libqicore: a layer on top of libqi</description>

  <maintainer email="mikael.arguedas@gmail.com">Mikael Arguedas</maintainer>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/aldebaran/libqicore</url>

  <author>Aldebaran</author>

  <build_depend>naoqi_libqi</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>naoqi_libqi</run_depend>
</package>
